Embed the world server in the Android build and test it on an emulator
Builds the full client + world server into one APK, ships the 2012 game
cache inside it, and adds a GitHub Actions emulator job so the port can
actually be run somewhere.

Build:
- rs.darkan:core is published as Java 24 bytecode (class file major 68),
  which neither JDK 21 javac nor D8 can read. Every import of it failed
  with "bad class file ... wrong version 68.0", cascading into ~200
  unrelated-looking "cannot find symbol" errors. downgradeDarkanCore
  rewrites the version header to 61; the jar has no post-17 constructs so
  this is lossless, and the task fails loudly on preview bytecode.
- Source-set exclude patterns match against every srcDir, so the plain
  patterns were also dropping the Android replacements that share a path.
  Scoped them by absolute path.
- Pinned the Kotlin module name to world-server: Java sources call
  internal members by their mangled name (Potion.drink$world_server).
- Dropped the .kts plugin script host, already reflection-guarded and
  disabled on Android, taking ~100MB of Kotlin compiler deps with it.
- minSdk 24 -> 26; undertow-core only dexes at 26+.

Game cache:
- stageCacheAssets bundles the ~837MB cache as APK assets with a
  name/size manifest; main_file_cache.dat2 is stored, not deflated.
- Rewrote the on-device extractor to be manifest-driven: .part files
  renamed on a size match, and a marker holding the manifest it came
  from, so an interrupted extract or a newer cache both re-extract
  instead of leaving a truncated cache that looks complete.
- First launch draws progress instead of a black screen.

Shared sources (desktop unaffected):
- jdk.jfr reached reflectively via TickRecorder; java.lang.management
  replaced with Runtime; Java 21 SequencedCollection calls, qualified
  enum switch labels, Random.nextInt(origin,bound), Files.readString and
  virtual threads all replaced with Android-compatible equivalents.

Co-Authored-By: Claude Opus 5 (1M